<resources>
    <string name="app_name">Pesos Al Dia</string>
    <string name="title_home">Inicio</string>
    <string name="title_historia">Historia</string>
    <string name="title_notifications">Notifications</string>
    <string name="tasa_cambiaria">Tasa Cambiaria</string>
    <string name="institucion">Institucion</string>
    <string name="fecha_de_actualizacion">Fecha de Actualizacion</string>
    <string name="precio_en_pesos">Precio en Pesos</string>
    <string name="precio_de_compra">Compra</string>
    <string name="precio_de_venta">Venta</string>
    <string name="buscar_instituciones">Buscar Instituciones</string>
    <string name="refresh">Refresh</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculator">Calculadora</string>


    <string name="nombre_label">Nombre del Banco:</string>
    <string name="monto_compra_label">Total Compra:</string>
    <string name="monto_venta_label">Total Venta:</string>
    <string name="fecha_actu_label">Fecha Act.:</string>
    <string name="image_desc">Imagen del Banco</string>
    <string name="variacion_del_peso_mxn">Variacion del Peso MXN</string>
    <string name="clic_en_en_el_grafico">Clic en en el Grafico</string>
    <string name="usd">USD</string>
    <string name="mxn">MXN</string>
    <string name="_0_0">0.0</string>
    <string name="_01_01_2025">01/01/2025</string>
    <string name="cerrar">Cerrar</string>
    <string name="monto_en_dolar">Monto en Dolar</string>
    <string name="bandera_eeuu">Bandera EEUU</string>
    <string name="cambio_de_bandera">Cambio de Bandera</string>
    <string name="bandera_mexico">Bandera Mexico</string>

    <string-array name="lista_history">
        <item>Ultimos 7 Dias</item>
        <item>Ultimos 30 Dias</item>

    </string-array>
</resources>