<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.carlosvpinto.dollar_mexico.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.carlosvpinto.dollar_mexico.ui.historia.HistoriaFragment"
        android:label="@string/title_historia"
        tools:layout="@layout/fragment_historia" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.carlosvpinto.dollar_mexico.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_calculator"
        android:name="com.carlosvpinto.dollar_mexico.ui.calculator.CalculatorFragment"
        android:label="@string/calculator"
        tools:layout="@layout/activity_calculator" />


</navigation>