<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

<de.hdodenhof.circleimageview.CircleImageView
    android:id="@+id/imageView"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_marginTop="70dp"
    android:layout_gravity="center_horizontal"
    android:contentDescription="@string/image_desc"
    android:src="@drawable/institution_svgrepo_com"

    app:civ_border_width="2dp"
    app:civ_border_color="@color/material_dynamic_primary0"/>
    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_label"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="18sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtxtDolares"
        style="@style/Theme.AppCompat.DayNight.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="Monto en Dolar"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_peso">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputDolares"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="16sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>



<TextView
    android:id="@+id/textViewMontoCompra"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/monto_compra_label"
    android:textSize="16sp"
    android:layout_marginTop="8dp" />

<TextView
    android:id="@+id/textViewMontoVenta"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/monto_venta_label"
    android:textSize="16sp"
    android:layout_marginTop="8dp" />

<TextView
    android:id="@+id/textViewFechaActu"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/fecha_actu_label"
    android:textSize="16sp"
    android:layout_marginTop="8dp" />

<Button
    android:id="@+id/btnCerrarCalculator"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Cerrar"
    android:layout_gravity="bottom"
    />

</LinearLayout>





